fixed delete button not showing, converted find song to find just videos

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,7 +31,7 @@ iframe {
   width: 100%;
   display: none; }
 
-#track:hover .remove.icon {
+.track:hover .remove.icon {
   opacity: 1; }
 
 .remove.icon {
